[knife] fix firefox issue

--- a/app/assets/stylesheets/knife_collection.css.sass
+++ b/app/assets/stylesheets/knife_collection.css.sass
@@ -245,6 +245,8 @@
             position: absolute
             top: 0px
             opacity: 0
+            img
+              width: 100%
           .annotation-slider-note-gallery-image:nth-of-type(1)
             opacity: 1
         .annotation-slider-note-gallery-thumbnails
