--- a/app/views/pages/knife_collection.html.haml
+++ b/app/views/pages/knife_collection.html.haml
@@ -4,235 +4,12 @@
 .container
   .row.section#intro
     .span5
-      .pull-left
-        = image_tag ('https://www.filepicker.io/api/file/Ya5vpVc1RzysqAPC5ZIJ/convert?fit=max&w=550')
+      = image_tag ('https://www.filepicker.io/api/file/Ya5vpVc1RzysqAPC5ZIJ/convert?fit=max&w=550')
     .span7
       %h1 ChefSteps Knife Collection
       %p An exceptional knife should be the cornerstone of a cook's arsenal. It becomes an extension of your own hands; the tool with which you will create art and bring refinement to the table. A beautiful, high-quality knife will follow you to every kitchen and last a lifetime if properly cared for. Handcrafted Japanese knives in particular bring elegance and sophistication to any dish—a perfectly sliced piece of salmon; a delicate chiffonade; a meticulous dice—all expertly executed with slender, high-performance Japanese blades. Our readers have asked what knives we use when we cook, and this curated collection of hand-forged artisan knives, each completely unique and in finite supply, is our answer. In other words: Only the best.
 
-/__________ START MODALS _____________/
-#asai-ao-1.modal.knife-modal.hide.fade
-  .knife-modal-header
-    %button(class="close" data-dismiss="modal" aria-hidden="true") &times;
-    %h3 Asai Chef's Knife
-  .knife-modal-body
-    = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/xgPYrtt9ROuDw4Qxany3/convert?fit=max&w=550', :class => "main-image"
-    = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/RlVj5HwlRJgi431Kcqsw/convert?fit=max&w=550', :class => "main-image hidden"
-    .section
-      %ul.inline
-        %li
-          %a(href="https://d3awvtnmmsvyot.cloudfront.net/api/file/xgPYrtt9ROuDw4Qxany3")
-            = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/xgPYrtt9ROuDw4Qxany3/convert?fit=max&w=75'
-        %li
-          %a(href="https://d3awvtnmmsvyot.cloudfront.net/api/file/RlVj5HwlRJgi431Kcqsw")
-            = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/RlVj5HwlRJgi431Kcqsw/convert?fit=max&w=75'
-    %p.section This high performance detail knife is made with the finest Japanese carbon steel for exceptional edge holding. A brushed stainless steel blade seems understated at first look (at least for Asai, whose knives usually feature highly stylized blades), but there’s intrigue here: after a few weeks of use, the carbon steel core gives way to a remarkable blue patina that need not be removed.
-
-  .knife-modal-footer
-    = buy_now(350234061,325)
-
-#asai-ao-2.modal.knife-modal.hide.fade
-  .knife-modal-header
-    %button(class="close" data-dismiss="modal" aria-hidden="true") &times;
-    %h3 Asai Petty Knife
-  .knife-modal-body
-    = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/uAG5HZMRxCmnSpb5a7mA', :class => "main-image"
-    %p.section This high performance detail knife is made with the finest Japanese carbon steel for exceptional edge holding. A brushed stainless steel blade seems understated at first look (at least for Asai, whose knives usually feature highly stylized blades), but there’s intrigue here: after a few weeks of use, the carbon steel core gives way to a remarkable blue patina that need not be removed.
-  .knife-modal-footer.section
-    = buy_now(350067813,169)
-
-
-#ohishi-hammer-1.modal.knife-modal.hide.fade
-  .knife-modal-header
-    %button(class="close" data-dismiss="modal" aria-hidden="true") &times;
-    %h3 Ohishi Chef's Knife
-  .knife-modal-body
-    = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/JuAyLXdSMSLoIyuVAqA4', :class => "main-image"    
-    = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/LNrdE7aRRLSaKt8gKtNM', :class => "main-image hidden"
-    = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/THxjO9E1TEqCyWaeytT7', :class => "main-image hidden"
-    .section
-      %ul.inline
-        %li
-          %a(href="https://d3awvtnmmsvyot.cloudfront.net/api/file/JuAyLXdSMSLoIyuVAqA4")
-            = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/JuAyLXdSMSLoIyuVAqA4/convert?fit=max&w=75'
-        %li 
-          %a(href="https://www.filepicker.io/api/file/LNrdE7aRRLSaKt8gKtNM")
-            = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/LNrdE7aRRLSaKt8gKtNM/convert?fit=max&w=75'
-        %li 
-          %a(href="https://www.filepicker.io/api/file/THxjO9E1TEqCyWaeytT7")
-            = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/THxjO9E1TEqCyWaeytT7/convert?fit=max&w=75'
-
-    %p.section With its thin blade geometry, solid pakkawood handle, and hammer finish, this knife is both beautiful and versatile. The blade has a VG10 super-steel core surrounded by 15 layers of stainless damascus for exceptional edge holding. The elegant tsuchime finish (meaning “hammered” in Japanese) forces food to fall away from the blade for enhanced efficiency.  
-  .knife-modal-footer.section
-    = buy_now(345914261,129)
-
-
-
-#ohishi-hammer-2.modal.knife-modal.hide.fade
-  .knife-modal-header
-    %button(class="close" data-dismiss="modal" aria-hidden="true") &times;
-    %h3 Ohishi Petty Knife
-  .knife-modal-body
-    = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/4VfViqxwSIO1O2kxWt5G', :class => "main-image"
-    = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/naTWQB6ySXOVZR1V4plT', :class => "main-image hidden"
-    .section
-      %ul.inline
-        %li
-          %a(href="https://d3awvtnmmsvyot.cloudfront.net/api/file/4VfViqxwSIO1O2kxWt5G")
-            = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/4VfViqxwSIO1O2kxWt5G/convert?fit=max&w=75'
-        %li 
-          %a(href="https://d3awvtnmmsvyot.cloudfront.net/api/file/naTWQB6ySXOVZR1V4plT")
-            = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/naTWQB6ySXOVZR1V4plT/convert?fit=max&w=75'
-
-    %p.section Perfect as a general purpose kitchen knife, this long, slender Petty blade has a VG10 super-steel core for clean cutting and a balanced pakkawood handle that’s durable and moisture-resistant. The elegant tsuchime finish (meaning “hammered” in Japanese) forces food to fall away from the blade for enhanced efficiency.
-  .knife-modal-footer.section
-    = buy_now(345912499,84)
-
-#yoshikane-sld-1.modal.knife-modal.hide.fade
-  .knife-modal-header
-    %button(class="close" data-dismiss="modal" aria-hidden="true") &times;
-    %h3 Yoshikane Chef's Knife
-  .knife-modal-body
-    = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/byaPReR5RPauvhY1Ze0t/convert?fit=max&h=375', :class => "main-image"
-    = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/aMonSF5TCeKddFWFi2z6', :class => "main-image hidden"
-    = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/bU8eukytRrmpN16RiOKi', :class => "main-image hidden"
-    .section
-      %ul.inline
-        %li
-          %a(href="https://d3awvtnmmsvyot.cloudfront.net/api/file/byaPReR5RPauvhY1Ze0t")
-            = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/byaPReR5RPauvhY1Ze0t/convert?fit=max&w=75'
-        %li
-          %a(href="https://d3awvtnmmsvyot.cloudfront.net/api/file/aMonSF5TCeKddFWFi2z6")
-            = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/aMonSF5TCeKddFWFi2z6/convert?fit=max&w=75'
-  
-        %li 
-          %a(href="https://d3awvtnmmsvyot.cloudfront.net/api/file/THxjO9E1TEqCyWaeytT7")
-            = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/bU8eukytRrmpN16RiOKi/convert?fit=max&w=75'
-    %p.section This elegant all-purpose chef’s knife features a long, slim blade perfect for sawing meat and vegetables, with a subtly uneven surface that prevents food from sticking. It features extremely rare blond buffalo horn ferrules, an ambidextrous enju wood handle, and a slim two-tone blade for a perfectly balanced, exceptionally handsome knife.
-  .knife-modal-footer.section
-    = buy_now(345920775,464)
-
-#yoshikane-sld-2.modal.knife-modal.hide.fade
-  .knife-modal-header
-    %button(class="close" data-dismiss="modal" aria-hidden="true") &times;
-    %h3 Yoshikane Petty Knife
-  .knife-modal-body
-    = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/zxxRDkwzTDqesXVpJrle/convert?fit=max&h=375', :class => "main-image"
-    = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/bU8eukytRrmpN16RiOKi', :class => "main-image hidden"
-    .section
-      %ul.inline
-        %li
-          %a(href="https://d3awvtnmmsvyot.cloudfront.net/api/file/zxxRDkwzTDqesXVpJrle")
-            = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/zxxRDkwzTDqesXVpJrle/convert?fit=max&w=75'
-        %li 
-          %a(href="https://d3awvtnmmsvyot.cloudfront.net/api/file/THxjO9E1TEqCyWaeytT7")
-            = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/bU8eukytRrmpN16RiOKi/convert?fit=max&w=75'
-  
-    .media-body
-      %p.section Best for detail slicing—think tomatoes and garlic—this utility knife by Yoshikane has a smooth, slender blade comprised of SLD stainless steel (core) and stainless steel damascus (surface) that slides easily through food. The blade’s suminagashi pattern (meaning "floating ink" in Japanese) together with its light enju wood handle (the same wood used for making Shinto shrines) makes it a perfect balance of artistry and performance.
-  .knife-modal-footer.section
-    = buy_now(345920201,339)
-
-#sharpening-1.modal.knife-modal.hide.fade
-  .knife-modal-header
-    %button(class="close" data-dismiss="modal" aria-hidden="true") &times;
-    %h3 Sharpening Stone Kit
-  .knife-modal-body.media
-    = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/xZBHFGfRByCEXftfgE2Q/convert?fit=max&w=500', :class => "main-image"
-    = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/1hfmZ0YOQsC3DGZkCwXb/convert?fit=max&w=500', :class => "main-image hidden"
-    = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/Uf9mCymiRjqGtRw7y8id/convert?fit=max&w=500', :class => "main-image hidden"
-    = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/73gcpvPeSTCeCMGHMeDr/convert?fit=max&w=500', :class => "main-image hidden"
-    .section
-      %ul.inline
-        %li
-          %a(href="https://d3awvtnmmsvyot.cloudfront.net/api/file/xZBHFGfRByCEXftfgE2Q")
-            = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/xZBHFGfRByCEXftfgE2Q/convert?fit=max&w=100'
-        %li
-          %a(href="https://d3awvtnmmsvyot.cloudfront.net/api/file/1hfmZ0YOQsC3DGZkCwXb")
-            = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/1hfmZ0YOQsC3DGZkCwXb/convert?fit=max&w=100'
-        %li
-          %a(href="https://d3awvtnmmsvyot.cloudfront.net/api/file/Uf9mCymiRjqGtRw7y8id")
-            = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/Uf9mCymiRjqGtRw7y8id/convert?fit=max&w=100'
-        %li
-          %a(href="https://d3awvtnmmsvyot.cloudfront.net/api/file/73gcpvPeSTCeCMGHMeDr")
-            = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/73gcpvPeSTCeCMGHMeDr/convert?fit=max&w=100'
-
-    .media-body
-      %p.section Sharpening copy
-  .knife-modal-footer.section
-    = buy_now(350238365,154)
-
-/____________ START KNIFE PRODUCTS_____________ / 
-
-/ .knife.first
-/   .row.section
-/     .span10.offset2
-/       %h4.media-heading Asai
-/       High in the Japanese Alps, in the small town of Takefu in the Fukui Prefecture, fifth-generation blacksmith Masami Asai forges some of the most distinctive handmade kitchen knives in the world. 
-
-/ .container-fluid
-/   .container
-/     .row.section
-/       .span12.section.button-container
-/         .add-button#asai-1
-/           %a(href='#asai-ao-1' data-target='#asai-ao-1' data-toggle='modal') +
-/         .add-button#asai-2
-/           %a(href='#asai-ao-2' data-target='#asai-ao-2' data-toggle='modal') +
-/         = image_tag ('https://d3awvtnmmsvyot.cloudfront.net/api/file/qzxRQ0rPS2j4tFZKutmg')
-
-/ .knife.section
-/   .row.section
-/     .span10.offset2
-/       %h4.media-heading Ohishi Hammer
-/       Ohishi produces some of the finest-quality factory knives in the world, with stylized, ultra-thin blades that surpass most German and American handmade knives in both performance and beauty.
-
-/ .container-fluid
-/   .container
-/     .row.section
-/       .span12.section.button-container
-/         .add-button#ohishi-1
-/           %a(href='#ohishi-hammer-1' data-target='#ohishi-hammer-1' data-toggle='modal') +
-/         .add-button#ohishi-2
-/           %a(href='#ohishi-hammer-2' data-target='#ohishi-hammer-2' data-toggle='modal') +
-/         = image_tag ('https://d3awvtnmmsvyot.cloudfront.net/api/file/XPuEItyPTOaL2iO5r79j')
-
-/ .knife.section
-/   .row.section
-/     .span10.offset2
-/       %h4.media-heading Yoshikane 
-/       Widely regarded as one of the most influential knifemakers in Japan, Tsuneo Yoshida handcrafts each Yoshikane knife with unmatched precision and artistry in his shop in Sanjo City.  Every Yoshikane knife is a work of art, each completely unique in its handmade construction, with a beauty matched only by performance—these blades are considered among the highest-quality available, with exceptional edge holding and comfortable feel.
-
-
-/ .container-fluid
-/   .container
-/     .row.section
-/       .span12.section.button-container
-/         .add-button#yoshikane-1
-/           %a(href='#yoshikane-sld-1' data-target='#yoshikane-sld-1' data-toggle='modal') +
-/         .add-button#yoshikane-2
-/           %a(href='#yoshikane-sld-2' data-target='#yoshikane-sld-2' data-toggle='modal') +
-
-/         = image_tag ('https://d3awvtnmmsvyot.cloudfront.net/api/file/MfWzTk4YRGm7SOQf2iUT')
-
-/ .knife.section
-/   .row.section
-/     .span10.offset2
-/       %h4.media-heading 
-/         Sharpening Stones Kit
-/       :markdown 
-/         A collection of high-quality knives requires a collection of high-quality waterstones to match. These professional-grade stones, designed specifically to sharpen high-quality steel, will keep your knives in superb condition for years to come. (Lower grade stones are often fragmented in their particle composition, making sharpening difficult and inconsistent.) Fix a broken tip, repair a damaged edge, polish your blade, or hone to razor sharp: This kit has everything you need to care for your finest knives. And [here’s how](http://www.chefsteps.com/activities/how-to-sharpen-a-knifecourse).
-
-
-/ .container-fluid
-/   .container
-/     .row.section
-/       .span12.section.button-container
-/         .add-button#sharpening
-/           %a(href='#sharpening-1' data-target='#sharpening-1' data-toggle='modal') +
-/         = image_tag ('https://d3awvtnmmsvyot.cloudfront.net/api/file/t3l7VdjR1qjMMWTNufwJ')
-
-
-// ASAI //
+// Start ASAI //
 
 .knife.first
   .row.section
@@ -278,9 +55,9 @@
             %p.section This high performance detail knife is made with the finest Japanese carbon steel for exceptional edge holding. A brushed stainless steel blade seems understated at first look (at least for Asai, whose knives usually feature highly stylized blades), but there’s intrigue here: after a few weeks of use, the carbon steel core gives way to a remarkable blue patina that need not be removed.
             = buy_now(350067813,169)
 
-// END ASAI //
+// End ASAI //
 
-// OHISHI //
+// Start OHISHI //
 
 .knife.section
   .row.section
@@ -405,6 +182,7 @@
 // End Yoshikane //
 
 // Start Sharpening Stones //
+
 .knife.section
   .row.section
     .span10.offset2
