[knife-products] update text

--- a/app/views/pages/knife_collection.html.haml
+++ b/app/views/pages/knife_collection.html.haml
@@ -13,9 +13,10 @@
 
 .knife.first
   .row.section
-    .span10.offset2
+    .span10.offset1
       %h4.media-heading Asai
-      High in the Japanese Alps, in the small town of Takefu in the Fukui Prefecture, fifth-generation blacksmith Masami Asai forges some of the most distinctive handmade kitchen knives in the world. 
+      High in the Japanese Alps, in the small town of Takefu in the Fukui Prefecture, fifth-generation blacksmith Masami Asai forges some of the most distinctive handmade kitchen knives in the world. His knives are both elegant and functional, made with the highest grade carbon steel alloy for perfect edge retention, and finished with graceful details like mocha-colored Makassar ebony and rich Pakkawood ferrules. Together with four other bladesmiths in the region, Asai opened a knifemaking school in Takefu in 1993, where he and others teach the artistry and tradition of handmade knifemaking to the next generation. Asai is a living legend among Japanese knifemakers, well-known by chefs worldwide for his delicate handiwork.
+
 
 .container
   .row.section
@@ -52,7 +53,7 @@
               %i.icon-remove
             %h3 Asai Petty Knife
             = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/uAG5HZMRxCmnSpb5a7mA', :class => "main-image"
-            %p.section This high performance detail knife is made with the finest Japanese carbon steel for exceptional edge holding. A brushed stainless steel blade seems understated at first look (at least for Asai, whose knives usually feature highly stylized blades), but there’s intrigue here: after a few weeks of use, the carbon steel core gives way to a remarkable blue patina that need not be removed.
+            %p.section Modeled after the French chef’s blade but with all the grace and beauty of a Japanese handmade knife, this Gyuto is exceptionally versatile as a general chef’s knife. The core is made of the finest Japanese carbon steel for unparalleled edge holding, and the blade’s distal tapering provides optimal balance and weight. A Makassar ebony handle and Pakkawood ferrules further classify this knife as a work of art.
             = buy_now(350067813,169)
 
 // End ASAI //
@@ -61,9 +62,9 @@
 
 .knife.section
   .row.section
-    .span10.offset2
+    .span10.offset1
       %h4.media-heading Ohishi Hammer
-      Ohishi produces some of the finest-quality factory knives in the world, with stylized, ultra-thin blades that surpass most German and American handmade knives in both performance and beauty.
+      Ohishi produces some of the finest-quality factory knives in the world, with stylized, ultra-thin blades that surpass most German and American handmade knives in both performance and beauty. At Ohishi, a small team of twenty-or-so blacksmiths and artisans design and forge knives with a characteristically thin blade geometry for clean cutting, and western-style riveted handles. The company, named after a small village at the foot of Mt Fuji where lavender grows rampant, set out to introduce high-performance knives at affordable prices, and they’ve done just that.
 
 .container
   .row.section
@@ -114,7 +115,7 @@
                   = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/4VfViqxwSIO1O2kxWt5G/convert?fit=max&w=75'
                 .annotation-slider-note-gallery-thumbnail
                   = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/naTWQB6ySXOVZR1V4plT/convert?fit=max&w=75'
-            %p.section Perfect as a general purpose kitchen knife, this long, slender Petty blade has a VG10 super-steel core for clean cutting and a balanced pakkawood handle that’s durable and moisture-resistant. The elegant tsuchime finish (meaning “hammered” in Japanese) forces food to fall away from the blade for enhanced efficiency.
+            %p.section Perfect as a general purpose kitchen knife, this long, slender Petty blade has a VG10 super-steel core for clean cutting, and a balanced pakkawood handle that’s durable and moisture-resistant. The elegant tsuchime finish (meaning “hammered” in Japanese) forces food to fall away from the blade for enhanced efficiency.
             = buy_now(345912499,84)
 
 // End Ohishi //
@@ -123,9 +124,15 @@
 
 .knife.section
   .row.section
-    .span10.offset2
+    .span10.offset1
       %h4.media-heading Yoshikane 
-      Widely regarded as one of the most influential knifemakers in Japan, Tsuneo Yoshida handcrafts each Yoshikane knife with unmatched precision and artistry in his shop in Sanjo City.  Every Yoshikane knife is a work of art, each completely unique in its handmade construction, with a beauty matched only by performance—these blades are considered among the highest-quality available, with exceptional edge holding and comfortable feel.
+      %p 
+        Widely regarded as one of the most influential living knifemakers in Japan, Mr. Tsuneo Yoshida handcrafts each Yoshikane knife with unmatched precision and artistry from his shop in Sanjo City, in the Niigata Prefecture of Japan. 
+      %p
+        Here, nestled in a valley along the northwestern coast of the Japanese Alps region, bladesmithing is a long-standing tradition dating back to the Edo period, when Japanese artisans manufactured the very first western-style pointed knives in Japan. Now, Sanjo City is home to some of the highest-quality handmade knifemaking in the world, and Mr. Tsuneo Yoshida continues and elevates that tradition in earnest. 
+      %p
+        Yoshida forged his first knife at the age of 18, after learning from his grandfather, and has now passed it along to his two nephews, who will take over the business when Yoshida retires. The tight-knit Yoshida family rises early each morning, and meticulously hand-makes each and every Yoshikane knife using rare, hard-to-source materials like blonde buffalo horn, mammoth ivory, and enju wood. Every Yoshikane knife is a work of art, but their beauty is certainly matched in performance—these blades are considered among the highest-caliber available, with exceptional edge-holding and comfortable feel.
+
 
 .container
   .row.section
@@ -160,7 +167,7 @@
             %p.section This elegant all-purpose chef’s knife features a long, slim blade perfect for sawing meat and vegetables, with a subtly uneven surface that prevents food from sticking. It features extremely rare blond buffalo horn ferrules, an ambidextrous enju wood handle, and a slim two-tone blade for a perfectly balanced, exceptionally handsome knife.
             = buy_now(345920775,464)
           .annotation-slider-image
-            = image_tag ('https://d3awvtnmmsvyot.cloudfront.net/api/file/MfWzTk4YRGm7SOQf2iUT')
+            = image_tag ('https://d3awvtnmmsvyot.cloudfront.net/api/file/MeXcSoEzSTCg05jeRkhn')
           .annotation-slider-note.note-right
             %a.annotation-close-btn
               %i.icon-remove
@@ -185,10 +192,10 @@
 
 .knife.section
   .row.section
-    .span10.offset2
+    .span10.offset1
       %h4.media-heading Sharpening Stones Kit 
       :markdown 
-        A collection of high-quality knives requires a collection of high-quality waterstones to match. These professional-grade stones, designed specifically to sharpen high-quality steel, will keep your knives in superb condition for years to come. (Lower grade stones are often fragmented in their particle composition, making sharpening difficult and inconsistent.) Fix a broken tip, repair a damaged edge, polish your blade, or hone to razor sharp: This kit has everything you need to care for your finest knives. And [here’s how](http://www.chefsteps.com/activities/how-to-sharpen-a-knifecourse).
+        A collection of high-quality knives requires a collection of high-quality waterstones to match. These professional-grade stones, designed specifically to sharpen high-quality steel, will keep your knives in superb condition for years to come. (Lower grade stones are often fragmented in their particle composition, making sharpening difficult and inconsistent.) Fix a broken tip, repair a damaged edge, polish your blade, or hone to razor sharp: This kit has everything you need to care for your finest knives. And [here’s how](http://www.chefsteps.com/activities/how-to-sharpen-a-knife).
 
 .container
   .row.section
@@ -222,7 +229,14 @@
                   = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/Uf9mCymiRjqGtRw7y8id/convert?fit=max&w=100'
                 .annotation-slider-note-gallery-thumbnail
                   = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/73gcpvPeSTCeCMGHMeDr/convert?fit=max&w=100'
-            %p.section Sharpening Copy
+            %p.section
+              Includes the following stones. For more details, see the shop page.
+              %ul
+                %li #1000 Grit Waterstone
+                %li #220 Grit Ceramic Waterstone
+                %li #3000/#8000 Grit Waterstone
+                %li Nagura Stones
+                %li Stone Holder
             = buy_now(350238365,154)
           .annotation-slider-image
             = image_tag ('https://d3awvtnmmsvyot.cloudfront.net/api/file/t3l7VdjR1qjMMWTNufwJ')
