--- a/app/views/ingredients/index.html.haml
+++ b/app/views/ingredients/index.html.haml
@@ -14,5 +14,10 @@
                 Include Recipes
             %i.icon-spinner.icon-spin.icon-large(ng-show="dataLoading")
 
+  .row.noprint(ng-cloak ng-show="alerts.length > 0")
+    .span8.offset2
+      %alert.edit-alert.alert-block(ng-repeat="alert in alerts" type="alert.type || 'error'" close="closeAlert($index)" ng-animate="'custom'")
+        {{alert.message}}
+
   .row.grid
     .ingredient-index.span12(ng-grid="gridOptions")
