--- a/app/assets/stylesheets/ingredients_index.css.sass
+++ b/app/assets/stylesheets/ingredients_index.css.sass
@@ -1,6 +1,11 @@
 @import mixins
 
 .ingredient-index-container
+  margin-top: 70px
+
+  .alert-block
+    margin-bottom: 10px
+
   .navbar
     padding-top: 56px
 
@@ -14,9 +19,6 @@
     form
       *
         margin-right: 20px
-
-  .grid
-    padding-top: 70px
 
   .ingredient-index
     height: 560px
