[knife] updated copy

--- a/app/assets/stylesheets/knife_collection.css.sass
+++ b/app/assets/stylesheets/knife_collection.css.sass
@@ -237,6 +237,8 @@
       @include boxsizing
       h3
         margin: 0px
+      h5
+        margin-bottom: 0px
       .annotation-slider-note-gallery
         .annotation-slider-note-gallery-images
           position: relative
