--- a/app/views/pages/knife_collection.html.haml
+++ b/app/views/pages/knife_collection.html.haml
@@ -231,12 +231,25 @@
                   = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/73gcpvPeSTCeCMGHMeDr/convert?fit=max&w=100'
             %p.section
               Includes the following stones. For more details, see the shop page.
-              %ul
-                %li #1000 Grit Waterstone
-                %li #220 Grit Ceramic Waterstone
-                %li #3000/#8000 Grit Waterstone
-                %li Nagura Stones
-                %li Stone Holder
+
+              %h5 #220 Grit Ceramic Waterstone
+              %p This fast-cutting abrasive waterstone is perfect for creating initial edge geometry and quickly removing material to fix chips and other damage.
+
+              %h5 #1000 Grit Waterstone
+              %p The Ohishi #1000 grit waterstone has a broad surface for refining longer knives. Its fast-cutting clay surface is best as a starting point for sharpening knives that are already in relatively good condition.
+
+              %h5 #3000/#8000 Grit Waterstone
+              %p This two-sided waterstone has a broad surface for refining longer knives. The #3000 grit side can be used to remove scratches or hone an aggressive edge, while the superfine #8000 grit side is perfect for creating a razor-sharp edge and polishing.
+
+              %h5 Nagura Stones
+              %p Nagura stones are extremely fine chalk stones that may be used to polish knives or clean the surfaces of your waterstones. They will improve the cutting effect of any stones with #3000 grit or greater.
+
+              %h5 Stone Holder
+              %p This stone holder has rubber feet for stability and rubber ends that will grip your waterstones without damaging them. The chrome-plated metal rods are rust resistant.
+
+              %h5 Honing Rod
+              %p Ceramic honing rods keep your knife in excellent condition between sharpening. A high-quality ceramic rod removes minimal material, maintaining a razor sharp edge without reshaping or scratching the blade.
+              
             = buy_now(350238365,154)
           .annotation-slider-image
             = image_tag ('https://d3awvtnmmsvyot.cloudfront.net/api/file/t3l7VdjR1qjMMWTNufwJ')
