[knife] css fixes

--- a/app/assets/stylesheets/knife_collection.css.sass
+++ b/app/assets/stylesheets/knife_collection.css.sass
@@ -1,6 +1,6 @@
 @import 'mixins'
 
-#intro
+#knife-intro
   position: fixed
   z-index: -100
 
@@ -179,7 +179,7 @@
 
 @media (max-width: 767px)
   .knife.first
-    margin-top: 550px
+    margin-top: 10px
 
   .button-container
     a
@@ -199,9 +199,15 @@
     left: 0px
     margin-left: 5%
 
+  #knife-intro
+    position: inherit
+
 @media (max-width: 480px)
   .knife.first
-    margin-top: 600px
+    margin-top: 10px
+
+  .knife.alt
+    padding: 10px
 
 // Annotation Slider //
 
