--- a/app/views/pages/knife_collection.html.haml
+++ b/app/views/pages/knife_collection.html.haml
@@ -2,7 +2,7 @@
 - content_for :description, "An exceptional knife should be the cornerstone of a cook's arsenal. It becomes an extension of your own hands; the tool with which you will create art and bring refinement to the table. A beautiful, high-quality knife will follow you to every kitchen and last a lifetime if properly cared for. Handcrafted Japanese knives in particular bring elegance and sophistication to any dish—a perfectly sliced piece of salmon; a delicate chiffonade; a meticulous dice—all expertly executed with slender, high-performance Japanese blades. Our readers have asked what knives we use when we cook, and this curated collection of hand-forged artisan knives, each completely unique and in finite supply, is our answer. In other words: Only the best."
 
 .container
-  .row.section#intro
+  .row.section#knife-intro
     .span5
       = image_tag ('https://www.filepicker.io/api/file/Ya5vpVc1RzysqAPC5ZIJ/convert?fit=max&w=550')
     .span7
@@ -14,7 +14,7 @@
 .knife.first
   .row.section
     .span10.offset1
-      %h4.media-heading Asai
+      %h3.media-heading Asai
       High in the Japanese Alps, in the small town of Takefu in the Fukui Prefecture, fifth-generation blacksmith Masami Asai forges some of the most distinctive handmade kitchen knives in the world. His knives are both elegant and functional, made with the highest grade carbon steel alloy for perfect edge retention, and finished with graceful details like mocha-colored Makassar ebony and rich Pakkawood ferrules. Together with four other bladesmiths in the region, Asai opened a knifemaking school in Takefu in 1993, where he and others teach the artistry and tradition of handmade knifemaking to the next generation. Asai is a living legend among Japanese knifemakers, well-known by chefs worldwide for his delicate handiwork.
 
 
@@ -63,7 +63,7 @@
 .knife.section
   .row.section
     .span10.offset1
-      %h4.media-heading Ohishi Hammer
+      %h3.media-heading Ohishi Hammer
       Ohishi produces some of the finest-quality factory knives in the world, with stylized, ultra-thin blades that surpass most German and American handmade knives in both performance and beauty. At Ohishi, a small team of twenty-or-so blacksmiths and artisans design and forge knives with a characteristically thin blade geometry for clean cutting, and western-style riveted handles. The company, named after a small village at the foot of Mt Fuji where lavender grows rampant, set out to introduce high-performance knives at affordable prices, and they’ve done just that.
 
 .container
@@ -125,7 +125,7 @@
 .knife.section
   .row.section
     .span10.offset1
-      %h4.media-heading Yoshikane 
+      %h3.media-heading Yoshikane 
       %p 
         Widely regarded as one of the most influential living knifemakers in Japan, Mr. Tsuneo Yoshida handcrafts each Yoshikane knife with unmatched precision and artistry from his shop in Sanjo City, in the Niigata Prefecture of Japan. 
       %p
@@ -193,7 +193,7 @@
 .knife.section
   .row.section
     .span10.offset1
-      %h4.media-heading Sharpening Stones Kit 
+      %h3.media-heading Sharpening Stones Kit 
       :markdown 
         A collection of high-quality knives requires a collection of high-quality waterstones to match. These professional-grade stones, designed specifically to sharpen high-quality steel, will keep your knives in superb condition for years to come. (Lower grade stones are often fragmented in their particle composition, making sharpening difficult and inconsistent.) Fix a broken tip, repair a damaged edge, polish your blade, or hone to razor sharp: This kit has everything you need to care for your finest knives. And [here’s how](http://www.chefsteps.com/activities/how-to-sharpen-a-knife).
 
