[knife] honing rod update

--- a/app/views/pages/knife_collection.html.haml
+++ b/app/views/pages/knife_collection.html.haml
@@ -274,7 +274,7 @@
               %i.icon-remove
             %h3 Honing Rod
             %p Ceramic honing rods keep your knife in excellent condition between sharpening. A high-quality ceramic rod removes minimal material, maintaining a razor sharp edge without reshaping or scratching the blade.
-            %small The honing rod is part of the Stone Sharpening Kit, but can also be purchased seperately in the store.
+            = buy_now(345926695,29)
 
 // End Honing Rod //
 .section
